tests/paczka1/fuzzy1/14705738.err
Error in line 12: WRJ A77 24,9
Error in line 13: WRJ S389 9,9
Error in line 19: A634 S443 54,7
Error in line 17: WRJ A77 7,3
Error in line 28: eF7 S389 92,5
Error in line 31: WRJ A634 23,2
